--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -182,6 +182,7 @@ jobs:
          with:
            name: reports_all
            pattern: reports_*
+           delete-merged: true
   compare-outputs:
     needs: [ merge-reports-artifacts ]
     runs-on: ubuntu-latest
@@ -214,7 +215,7 @@ jobs:
            --run_id ${{github.run_id}}
       - name: Persist acceptance test reports
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: acceptance_test_report
           path: acceptance-test-output
