--- a/core/build.gradle
+++ b/core/build.gradle
@@ -42,6 +42,11 @@ dependencies {
     implementation 'com.googlecode.libphonenumber:libphonenumber:8.12.13'
     implementation 'com.google.flogger:flogger:0.6'
     implementation 'io.github.classgraph:classgraph:4.8.146'
+    implementation 'org.geotools:gt-main:31.2'
+    implementation 'org.geotools:gt-shapefile:31.2'
+    implementation 'org.geotools:gt-geojson:31.2'
+    implementation 'org.geotools:gt-api:31.2'
+    implementation 'org.locationtech.jts:jts-core:1.19.0'
     testImplementation 'com.google.flogger:flogger-system-backend:0.6'
     testImplementation group: 'junit', name: 'junit', version: '4.13'
     testImplementation "com.google.truth:truth:1.0.1"
