--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,5 @@ app/pkg/bin/
 processor/notices/bin/
 processor/notices/tests/bin/
 web/service/bin/
+/web/service/execution_result.json
+/web/client/static/RULES.md
