--- a/.gitignore
+++ b/.gitignore
@@ -104,5 +104,6 @@ app/pkg/bin/
 processor/notices/bin/
 processor/notices/tests/bin/
 web/service/bin/
+/web/service/execution_result.json
 
 RULES.md
