--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -20,7 +20,7 @@ concurrency:
   group: ${{ github.head_ref }}
   cancel-in-progress: true
 jobs:
-  fail_if_pull_request_is_draft: # Fails in order to indicate that pull request needs to be marked as ready to review to pass.
+  fail_if_pull_request_is_draft: 
     if: github.event.pull_request.draft == true
     runs-on: ubuntu-latest
     steps:
