trigger acceptance tests

--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -1,7 +1,7 @@
 name: Rule acceptance tests
 on:
   pull_request:
-    branches: [ master ]
+#    branches: [ master ]
     paths-ignore:
       - '**.md'
       - 'Dockerfile'
