--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -1,21 +1,7 @@
 name: Rule acceptance tests
 on:
   pull_request:
-#    branches: [ master ]
-    paths-ignore:
-      - '**.md'
-      - 'Dockerfile'
-      - '.gitignore'
-      - 'LICENSE'
-      - 'docker.yml'
-      - 'formatting.yml'
-      - 'test_pack_dock.yml'
-      - 'triage.yml'
-      - 'end_to_end.yml'
-      - 'web/**'
-      - '.github/workflows/web_**.yml'
-      - '.github/workflows/stg_web_**.yml'
-    types: [ opened, synchronize, reopened, ready_for_review ]
+   branches: [ feat/1698 ]
   workflow_dispatch:
 concurrency:
   group: ${{ github.head_ref }}
