--- a/.github/workflows/package_installers.yml
+++ b/.github/workflows/package_installers.yml
@@ -157,7 +157,7 @@ jobs:
       - name: Package RPM app installer (Ubuntu)
         if: matrix.os == 'ubuntu-latest'
         run: |
-          gem install --user-install --no-document fpm
+          sudo gem install --no-document fpm
           echo 'export PATH=$HOME/.local/share/gem/ruby/3.0.0/bin:$PATH' >> $GITHUB_ENV
           if [ "${{ env.IS_SNAPSHOT }}" = "true" ]; then
             rpmVersion="${{ env.APP_VERSION }}-SNAPSHOT"
