--- a/.github/workflows/secret_refs.yml
+++ b/.github/workflows/secret_refs.yml
@@ -15,6 +15,7 @@ jobs:
         id: extract_value
         uses: ./.github/actions/extract-1password-secret
         with:
+          OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }} # This is required to connect to the vault in our 1Password account.
           keys: 'SONATYPE_TOKEN_USERNAME SONATYPE_TOKEN_PASSWORD qaz'
           ONE_PASSWORD_SECRET_REFERENCES: ${{ vars.ONE_PASSWORD_SECRET_REFERENCES }}
 
