--- a/.github/actions/extract-1password-secret/action.yml
+++ b/.github/actions/extract-1password-secret/action.yml
@@ -45,7 +45,7 @@ runs:
       with:
         export-env: true # Export loaded secrets as environment variables
       env:
-        OP_SERVICE_ACCOUNT_TOKEN: ${{ input.SERVICE_ACCOUNT_TOKEN }} # This is required to connect to the vault in our 1Password account.
+        OP_SERVICE_ACCOUNT_TOKEN: ${{ inputs.SERVICE_ACCOUNT_TOKEN }} # This is required to connect to the vault in our 1Password account.
 
 
     - name: print secrets
