--- a/.github/actions/extract-1password-secret/action.yml
+++ b/.github/actions/extract-1password-secret/action.yml
@@ -43,7 +43,7 @@ runs:
         export-env: true # Export loaded secrets as environment variables
       env:
         OP_SERVICE_ACCOUNT_TOKEN: ${{ inputs.OP_SERVICE_ACCOUNT_TOKEN }} # This is required to connect to the vault in our 1Password account.
-
+        SONATYPE_TOKEN_USERNAME: $SONATYPE_TOKEN_USERNAME
 
     - name: print secrets
       shell: bash
