--- a/.github/actions/extract-1password-secret/action.yml
+++ b/.github/actions/extract-1password-secret/action.yml
@@ -43,9 +43,9 @@ runs:
         export-env: true # Export loaded secrets as environment variables
       env:
         OP_SERVICE_ACCOUNT_TOKEN: ${{ inputs.OP_SERVICE_ACCOUNT_TOKEN }} # This is required to connect to the vault in our 1Password account.
-        SONATYPE_TOKEN_USERNAME_QAZ: "op://PUBLIC TRANSIT/Sonatype/User token/Token user name"
+        SONATYPE_TOKEN_USERNAME_QAZ: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/ifkeehu5gzi7wy5ub5qvwkaire/credential"
 
     - name: print secrets
       shell: bash
       run: |
-        echo "The value for the SONATYPE_TOKEN_USERNAME_QAZ is $SONATYPE_TOKEN_USERNAME_QAZ"
+        echo "The value for the CREDENTIALS is $CREDENTIALS"
