--- a/.github/actions/extract-1password-secret/action.yml
+++ b/.github/actions/extract-1password-secret/action.yml
@@ -42,6 +42,7 @@ runs:
       with:
         export-env: true # Export loaded secrets as environment variables
       env:
+        OP_MANAGED_VARIABLES: "CREDENTIALS SONATYPE_TOKEN_USERNAME"
         OP_SERVICE_ACCOUNT_TOKEN: ${{ inputs.OP_SERVICE_ACCOUNT_TOKEN }} # This is required to connect to the vault in our 1Password account.
         CREDENTIALS: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/ifkeehu5gzi7wy5ub5qvwkaire/credential"
 
@@ -49,3 +50,4 @@ runs:
       shell: bash
       run: |
         echo "The value for the CREDENTIALS is $CREDENTIALS"
+        echo "The value for the SONATYPE_TOKEN_USERNAME is $SONATYPE_TOKEN_USERNAME"
