--- a/.github/actions/extract-1password-secret/action.yml
+++ b/.github/actions/extract-1password-secret/action.yml
@@ -42,12 +42,13 @@ runs:
       with:
         export-env: true # Export loaded secrets as environment variables
       env:
-        OP_MANAGED_VARIABLES: "CREDENTIALS SONATYPE_TOKEN_USERNAME"
         OP_SERVICE_ACCOUNT_TOKEN: ${{ inputs.OP_SERVICE_ACCOUNT_TOKEN }} # This is required to connect to the vault in our 1Password account.
         CREDENTIALS: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/ifkeehu5gzi7wy5ub5qvwkaire/credential"
+        MAVEN_GPG_PRIVATE_KEY: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/yztcx47yzp4vizjyaq7ulvkgoi/Private Key"
+        MAVEN_GPG_PASSPHRASE: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/yztcx47yzp4vizjyaq7ulvkgoi/password"
 
     - name: print secrets
       shell: bash
       run: |
         echo "The value for the CREDENTIALS is $CREDENTIALS"
-        echo "The value for the SONATYPE_TOKEN_USERNAME is $SONATYPE_TOKEN_USERNAME"
+        echo "The value for the MAVEN_GPG_PRIVATE_KEY is $MAVEN_GPG_PRIVATE_KEY"
