--- a/.github/actions/extract-1password-secret/action.yml
+++ b/.github/actions/extract-1password-secret/action.yml
@@ -45,10 +45,10 @@ runs:
         OP_SERVICE_ACCOUNT_TOKEN: ${{ inputs.OP_SERVICE_ACCOUNT_TOKEN }} # This is required to connect to the vault in our 1Password account.
         CREDENTIALS: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/ifkeehu5gzi7wy5ub5qvwkaire/credential"
         MAVEN_GPG_PRIVATE_KEY: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/dkkfywvsr3xq6eyeubq6cldaxi/Private Key"
-        MAVEN_GPG_PASSPHRASE: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/dkkfywvsr3xq6eyeubq6cldaxi/password"
+        OP_MANAGED_VARIABLES: "MAVEN_GPG_PRIVATE_KEY,MAVEN_GPG_PASSPHRASE,CREDENTIALS"
 
     - name: print secrets
       shell: bash
       run: |
         echo "The value for the CREDENTIALS is $CREDENTIALS"
-        echo "The value for the MAVEN_GPG_PRIVATE_KEY is $MAVEN_GPG_PRIVATE_KEY"
+        echo "The value for the MAVEN_GPG_PASSPHRASE is $MAVEN_GPG_PASSPHRASE"
