Added 1password extraction 7

--- a/.github/workflows/secret_refs.yml
+++ b/.github/workflows/secret_refs.yml
@@ -16,11 +16,10 @@ jobs:
         uses: ./.github/actions/extract-1password-secret
         with:
           OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }} # This is required to connect to the vault in our 1Password account.
-          keys: 'SONATYPE_TOKEN_USERNAME SONATYPE_TOKEN_PASSWORD MAVEN_GPG_PASSPHRASE qaz'
+          keys: 'MAVEN_GPG_PASSPHRASE qaz'
           ONE_PASSWORD_SECRET_REFERENCES: ${{ vars.ONE_PASSWORD_SECRET_REFERENCES }}
 
       - name: Use extracted value
         run: |
-          echo "The value for the SONATYPE_TOKEN_USERNAME is ${{ env.SONATYPE_TOKEN_USERNAME }}"
-          echo "The value for the SONATYPE_TOKEN_PASSWORD is ${{ env.SONATYPE_TOKEN_PASSWORD }}"
+          echo "The value for the MAVEN_GPG_PASSPHRASE is ${{ env.MAVEN_GPG_PASSPHRASE }}"
           echo "The value for the qaz is ${{ env.qaz }}"
