--- a/.github/actions/extract-1password-secret/action.yml
+++ b/.github/actions/extract-1password-secret/action.yml
@@ -46,6 +46,7 @@ runs:
         CREDENTIALS: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/ifkeehu5gzi7wy5ub5qvwkaire/credential"
         MAVEN_GPG_PRIVATE_KEY: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/dkkfywvsr3xq6eyeubq6cldaxi/Private Key"
         OP_MANAGED_VARIABLES: "MAVEN_GPG_PRIVATE_KEY,MAVEN_GPG_PASSPHRASE,CREDENTIALS"
+        keys: "${{ inputs.keys }}"
 
     - name: print secrets
       shell: bash
