--- a/.github/actions/extract-1password-secret/action.yml
+++ b/.github/actions/extract-1password-secret/action.yml
@@ -32,7 +32,7 @@ runs:
            echo "value = $value"
            echo "variable_name = $variable_name"
            export "$variable_name"=$value
-           echo "$variable_name=\"$value\"" >> $GITHUB_ENV
+           echo "$variable_name=$value" >> $GITHUB_ENV
            echo "$variable_name=\"$value\""
         done
 
