--- a/.github/actions/extract-1password-secret/action.yml
+++ b/.github/actions/extract-1password-secret/action.yml
@@ -38,15 +38,15 @@ runs:
 
     - name: Load secrets from 1Password
       id: onepw_secrets
-      uses: jcpitre/load-secrets-action@v10.0.11
+      uses: jcpitre/load-secrets-action@v10.0.12
       with:
         export-env: true # Export loaded secrets as environment variables
       env:
         OP_SERVICE_ACCOUNT_TOKEN: ${{ inputs.OP_SERVICE_ACCOUNT_TOKEN }} # This is required to connect to the vault in our 1Password account.
-        CREDENTIALS: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/ifkeehu5gzi7wy5ub5qvwkaire/credential"
-        MAVEN_GPG_PRIVATE_KEY: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/dkkfywvsr3xq6eyeubq6cldaxi/Private Key"
-        OP_MANAGED_VARIABLES: "MAVEN_GPG_PRIVATE_KEY,MAVEN_GPG_PASSPHRASE,CREDENTIALS"
-        keys: "${{ inputs.keys }}"
+#        CREDENTIALS: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/ifkeehu5gzi7wy5ub5qvwkaire/credential"
+#        MAVEN_GPG_PRIVATE_KEY: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/dkkfywvsr3xq6eyeubq6cldaxi/Private Key"
+#        OP_MANAGED_VARIABLES: "MAVEN_GPG_PRIVATE_KEY,MAVEN_GPG_PASSPHRASE,CREDENTIALS"
+#        keys: "${{ inputs.keys }}"
 
     - name: print secrets
       shell: bash
