--- a/.github/actions/extract-1password-secret/action.yml
+++ b/.github/actions/extract-1password-secret/action.yml
@@ -31,9 +31,9 @@ runs:
            echo "key = $key"
            echo "value = $value"
            echo "variable_name = $variable_name"
-           export "$variable_name"=$value
+#           export "$variable_name"="$value"
            echo "$variable_name=$value" >> $GITHUB_ENV
-           echo "$variable_name=$value"
+           echo "$variable_name="$value"
         done
 
     - name: Load secrets from 1Password
