--- a/.github/workflows/secret_refs.yml
+++ b/.github/workflows/secret_refs.yml
@@ -17,27 +17,10 @@ jobs:
         with:
           OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }} # This is required to connect to the vault in our 1Password account.
           keys: 'MAVEN_GPG_PASSPHRASE, MAVEN_GPG_PRIVATE_KEY, GITHUB_GENERIC_ACTION_CREDENTIALS, qaz'
-          ONE_PASSWORD_SECRET_REFERENCES: ${{ vars.ONE_PASSWORD_SECRET_REFERENCES }}
+#          ONE_PASSWORD_SECRET_REFERENCES: ${{ vars.ONE_PASSWORD_SECRET_REFERENCES }}
 
       - name: Use extracted value
         run: |
           echo "The value for the MAVEN_GPG_PASSPHRASE is $MAVEN_GPG_PASSPHRASE"
           echo "The value for the GITHUB_GENERIC_ACTION_CREDENTIALS is $GITHUB_GENERIC_ACTION_CREDENTIALS"
           echo "The value for the qaz is ${{ env.qaz }}"
-
-#      - name: Load secrets from 1Password
-#        id: onepw_secrets
-#        uses: 1password/load-secrets-action@v2.0.0
-#        with:
-#          export-env: true # Export loaded secrets as environment variables
-#        env:
-#          OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }} # This is required to connect to the vault in our 1Password account.
-#          GITHUB_GENERIC_ACTION_CREDENTIALS: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/GitHub generic action token for all repos/credential"
-#          MAVEN_GPG_PASSPHRASE: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/dkkfywvsr3xq6eyeubq6cldaxi/password"
-#
-#
-#      - name: print secrets
-#        shell: bash
-#        run: |
-#          echo "The value for the MAVEN_GPG_PASSPHRASE is $MAVEN_GPG_PASSPHRASE"
-#          echo "The value for the GITHUB_GENERIC_ACTION_CREDENTIALS is $GITHUB_GENERIC_ACTION_CREDENTIALS"
