--- a/.github/actions/extract-1password-secret/action.yml
+++ b/.github/actions/extract-1password-secret/action.yml
@@ -1,14 +1,14 @@
 name: 'Extract Value'
 description: 'Extracts the value for a given key from a GitHub variable'
 inputs:
-  keys:
+  VARIABLES_TO_EXTRACT:
     description: 'A list of space separated keys to extract'
     required: true
     type: string
-#  ONE_PASSWORD_SECRET_REFERENCES:
-#    description: 'The contents of the ONE_PASSWORD_SECRET_REFERENCES variable'
-#    required: true
-#    type: string
+  ONE_PASSWORD_SECRET_REFERENCES:
+    description: 'The contents of the ONE_PASSWORD_SECRET_REFERENCES variable'
+    required: true
+    type: string
   OP_SERVICE_ACCOUNT_TOKEN:
     description: 'The 1Password service account token'
     required: true
@@ -21,14 +21,13 @@ runs:
       id: extract_value
       shell: bash
       continue-on-error: true
-      env:
-#        key_values: ${{ vars.ONE_PASSWORD_SECRET_REFERENCES }}
-        qaz: ${{ secrets.GCP_WEB_VALIDATOR_SA_KEY }}
+#      env:
+#        key_values: ${{ inputs.ONE_PASSWORD_SECRET_REFERENCES }}
       run: |
-        keys=$(echo "${{ inputs.keys }}" | tr ',' ' ')
+        keys=$(echo "${{ inputs.VARIABLES_TO_EXTRACT }}" | tr ',' ' ')
         for key in $keys; do
            variable_name=$(echo "$key" | sed 's/^ *//;s/ *$//')
-           value=$(echo "$key_values" | grep "^$variable_name *=" | cut -d'=' -f2- | sed 's/^ *//;s/[ \r]*$//')
+           value=$(echo "${{ inputs.ONE_PASSWORD_SECRET_REFERENCES }}" | grep "^$variable_name *=" | cut -d'=' -f2- | sed 's/^ *//;s/[ \r]*$//')
            echo "value = $value"
            echo "variable_name = $variable_name"
            echo "$variable_name=$value" >> $GITHUB_ENV
