--- a/.github/workflows/publish_assets.yml
+++ b/.github/workflows/publish_assets.yml
@@ -32,7 +32,7 @@ jobs:
         run: ./gradlew shadowJar
 
       - name: Upload JAR Asset
-#        if: github.event_name == 'release'
+        if: github.event_name == 'release'
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
