--- a/.github/workflows/publish_assets.yml
+++ b/.github/workflows/publish_assets.yml
@@ -104,7 +104,7 @@ jobs:
         run: |
           # The gradle java verifying plugin does not work with java 17.
           # Don't verify since it has already been done when the PR was created.
-          ./gradlew publish -x verifyGoogleJavaFormat
+          ./gradlew publish --rerun-tasks -x verifyGoogleJavaFormat
 #        env:
 #          SONATYPE_TOKEN_USERNAME: ${{secrets.SONATYPE_USERNAME}}
 #          SONATYPE_TOKEN_PASSWORD: ${{secrets.SONATYPE_PASSWORD}}
