--- a/.github/workflows/stg_web_svc_merge.yml
+++ b/.github/workflows/stg_web_svc_merge.yml
@@ -56,16 +56,16 @@ jobs:
 
       - name: Load secrets from 1Password to be used for sending notification
         id: onepw_secrets
-        uses: 1password/load-secrets-action@v2.0.0
+        uses: ./.github/actions/extract-1password-secret
         with:
-          export-env: true # Export loaded secrets as environment variables
-        env:
-          OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
-          CREDENTIALS: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/ifkeehu5gzi7wy5ub5qvwkaire/credential"
+          OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }} # This is required to connect to the vault in our 1Password account.
+          VARIABLES_TO_EXTRACT: 'GITHUB_GENERIC_ACTION_CREDENTIALS'
+          ONE_PASSWORD_SECRET_REFERENCES: ${{ vars.ONE_PASSWORD_SECRET_REFERENCES }}
+
 
       - name: Send a notification to mobility-feed-api
         uses: peter-evans/repository-dispatch@v2
         with:
-          token: ${{ env.CREDENTIALS }}
+          token: ${{ env.GITHUB_GENERIC_ACTION_CREDENTIALS }}
           repository: MobilityData/mobility-feed-api
           event-type: gtfs-validator-update-stg
