--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -105,7 +105,17 @@ jobs:
         env:
           OUTPUT_BASE: ${{ github.sha }}
       - name: Persist reports
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
+        with:
+          name: reports_snapshot_${{ matrix.data.id }}
+          path: ${{ github.sha }}/output
+  merge-reports-artifacts:
+    runs-on: ubuntu-latest
+    needs: [ run-on-data ]
+    steps:
+      - name: Merge Artifacts
+        uses: actions/upload-artifact/merge@v4
         with:
           name: reports_snapshot
-          path: ${{ github.sha }}/output
+          pattern: reports_snapshot_*
+          delete-merged: true
