add manual trigger

--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -31,6 +31,7 @@ on:
       - 'acceptance_test.yml'
       - 'web/**'
       - '.github/workflows/**'
+  workflow_dispatch:
 jobs:
   validate_gradle_wrapper:
     runs-on: ubuntu-latest
