--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -15,6 +15,7 @@ on:
       - 'triage.yml'
       - 'acceptance_test.yml'
       - 'web/**'
+      - '.github/workflows/**'
   pull_request:
     branches: [ master ]
     paths-ignore:
