--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -2,7 +2,7 @@ name: End to end
 
 on:
   push:
-    branches: [ master, "chore/upgrade-upload-artifact" ]
+    branches: [ master, chore/upgrade-upload-artifact ]
     paths-ignore:
       - '**.md'
       - '**.py'
