--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -31,6 +31,7 @@ on:
       - 'acceptance_test.yml'
       - 'web/**'
       - '.github/workflows/**'
+  workflow_dispatch:
 jobs:
   validate_gradle_wrapper:
     runs-on: ubuntu-latest
@@ -104,8 +105,21 @@ jobs:
           bash ./scripts/queue_runner.sh --exclude-master $queue
         env:
           OUTPUT_BASE: ${{ github.sha }}
+      - name: Extract ID from JSON
+        id: extract-id
+        run: echo "feed_id=$(echo '${{ matrix.data }}' | jq -r '.id')" >> $GITHUB_ENV
       - name: Persist reports
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
+        with:
+          name: reports_snapshot_${{ env.feed_id }}
+          path: ${{ github.sha }}/output
+  merge-reports-artifacts:
+    runs-on: ubuntu-latest
+    needs: [ run-on-data ]
+    steps:
+      - name: Merge Artifacts
+        uses: actions/upload-artifact/merge@v4
         with:
           name: reports_snapshot
-          path: ${{ github.sha }}/output
+          pattern: reports_snapshot_*
+          delete-merged: true
