--- a/scripts/notice-migration-generator/requirements.txt
+++ b/scripts/notice-migration-generator/requirements.txt
@@ -1,11 +1,11 @@
-importlib-metadata==6.8.0
-numpy==1.25.0
-pandas==2.0.3
-python-dateutil==2.8.2
-pytz==2023.3
-tzdata==2023.3
-six==1.16.0
-zipp==3.19.1
+importlib-metadata==8.5.0
+numpy==2.2.2
+pandas==2.2.3
+python-dateutil==2.9.0.post0
+pytz==2024.2
+tzdata==2024.2
+six==1.17.0
+zipp==3.21.0
 markdown
 tabulate
 jsondiff
