--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,6 +6,10 @@ on:
   release:
     types: [ prereleased, released ]
 
+env:
+  java_version: '11'
+  java_distribution: 'temurin'
+
 jobs:
   validate_gradle_wrapper:
     runs-on: ubuntu-latest
@@ -17,11 +21,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 11
+      - name: Set up JDK ${{ env.java_version }}-${{ env.java_distribution }}
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
-          distribution: 'temurin'
+          java-version: ${{ env.java_version }}
+          distribution: ${{ env.java_distribution }}
       - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
@@ -47,11 +51,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0 # need full clone so `./gradlew currentVersion` can search parents for older tags when needed
-      - name: Set up JDK 11
+      - name: Set up JDK ${{ env.java_version }}-${{ env.java_distribution }}
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
-          distribution: 'temurin'
+          java-version: ${{ env.java_version }}
+          distribution: ${{ env.java_distribution }}
       - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
