--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -7,16 +7,20 @@ on:
       - '**.md'
       - '.github/workflows/**'
 
+env:
+  java_version: '11'
+  java_distribution: 'temurin'
+
 jobs:
   formatting:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 11
+      - name: Set up JDK ${{ env.java_version }}-${{ env.java_distribution }}
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
-          distribution: 'temurin'
+          java-version: ${{ env.java_version }}
+          distribution: ${{ env.java_distribution }}
       - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
