--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -8,8 +8,8 @@ on:
       - '.github/workflows/**'
 
 env:
-  java_version: '11'
-  java_distribution: 'temurin'
+  java_version: '17.0'
+  java_distribution: 'zulu'
 
 jobs:
   formatting:
@@ -30,7 +30,7 @@ jobs:
       - name: Check code compliance to google java format standards
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: verGJF
+          arguments: spotlessCheck --quiet --continue
       - name: Comment PR if code does not comply to Google Java style guide
         if: ${{ failure() }}
         uses: actions/github-script@v6
